Fix: Image overflow fixed.

--- a/src/index.css
+++ b/src/index.css
@@ -42,12 +42,19 @@ button:disabled {
 
 .song-item {
   background: white;
-  border-radius: 10px;
-  padding: 1.5em;
+  border-radius: 15px;   
+  padding: 4em;               
+  padding-top: 1em;      
   text-align: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  width: 250px;
+  width: 300px;         
+  height: 350px;          
+  overflow: hidden;        
+  margin: 1em;     
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .song-item:hover {
@@ -67,3 +74,22 @@ button:disabled {
   font-size: 1rem;
 }
 
+.song-img-container {
+  width: 100%;          
+  height: 200px;         
+  padding: 10px;         
+  display: flex;          
+  justify-content: center;
+  align-items: center;     
+}
+
+.song-img {
+  width: 100%;        
+  height: 100%;           
+  object-fit: cover;        
+  border-radius: 10px; 
+}
+
+.song-current {
+  box-shadow: 0px 0px 12px 4px #00c9a7;
+}
